TP/TP4/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
 name: service-nodeport
 namespace: development
spec:
 ports:
 - port: 8000
   protocol: TCP
   targetPort: 8000
   nodePort: 30000
 selector:
   app: pods-ms-ip
 type: NodePort
