TP/TP4/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web
  namespace: development

spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    port: 443
    protocol: HTTPS
      #hostname: "ms-ip.test.org"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: secret-tls.ms-ip

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-web-service
  namespace: development
spec:
  parentRefs:
  - name: prod-web
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/v0/
    backendRefs:
    - name: ms-ip-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: website-svc
      port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: development
spec:
  parentRefs:
  - name: prod-web
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 443
